# python_modules

module05/: adapters.py  create_stages.py  nexus_pipeline.py  simple_pipeline.py
module06/: ft_sacred_scroll.py
module06/alchemy/: __init__.py  elements.py
module06/alchemy/grimoire/: validator.py
module07/: __init__.py
module07/ex0/: Card.py  CreatureCard.py  __init__.py  main.py
module07/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
module07/ex2/: Combatable.py  EliteCard.py  Magical.py  __init__.py  main.py
module07/ex3/: AggressiveStrategy.py  CardFactory.py  FantasyCardFactory.py  GameEngine.py  GameStrategy.py  __init__.py  main.py
module07/ex4/: Rankable.py  TournamentCard.py  TournamentPlatform.py  __init__.py  main.py
module08/ex1/: loading.py  pyproject.toml  requirements.txt
module08/ex2/: .env.example  oracle.py
module09/ex0/: space_station.py
module09/ex1/: alien_contact.py
module09/ex2/: space_crew.py
module10/ex0/: lambda_spells.py
module10/ex1/: higher_magic.py
module10/ex2/: scope_mysteries.py
module10/ex3/: functools_artifacts.py
module10/ex4/: decorator_mastery.py
