[project]
name = "matrix"
version = "0.1.0"
description = "visualization"
authors = [
    {name = "Sacha Markarian",email = "samarkar@42lyon.fr"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
